--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "type": "module",
   "dependencies": {
-    "lucide-svelte": "^0.453.0"
+    "lucide-svelte": "^0.453.0",
+    "swiper": "^11.1.14"
   }
 }
