--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/typography": "^0.5.14",
+    "@zerodevx/svelte-img": "^2.1.2",
     "autoprefixer": "^10.4.20",
     "svelte": "^4.2.7",
     "tailwindcss": "^3.4.9",
