--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@zerodevx/svelte-img": "^2.1.2",
+		"autoprefixer": "^10.4.20",
+		"clsx": "^2.1.1",
 		"svelte": "^4.2.7",
+		"tailwind-merge": "^2.5.5",
+		"tailwind-variants": "^0.3.0",
+		"tailwindcss": "^3.4.9",
+		"tailwindcss-animate": "^1.0.7",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"@tailwindcss/container-queries": "^0.1.1",
+		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/typography": "^0.5.15",
 		"lucide-svelte": "^0.462.0"
 	}
 }
