--- a/package.json
+++ b/package.json
@@ -8,25 +8,28 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/kit": "^2.9.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.1",
 		"@zerodevx/svelte-img": "^2.1.2",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "^1.0.0-next.65",
 		"clsx": "^2.1.1",
-		"svelte": "^4.2.7",
+		"embla-carousel-svelte": "^8.5.1",
+		"svelte": "^5.8.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^3.4.16",
 		"tailwindcss-animate": "^1.0.7",
-		"vite": "^5.0.3"
+		"vite": "^6.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"lucide-svelte": "^0.462.0"
+		"embla-carousel-autoplay": "^8.5.1",
+		"lucide-svelte": "^0.468.0"
 	}
 }
