--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"embla-carousel-autoplay": "^8.5.1",
+		"embla-carousel-wheel-gestures": "^8.0.1",
 		"lucide-svelte": "^0.468.0"
 	}
 }
