--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite build && vite preview"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.3.1",
