--- a/package.json
+++ b/package.json
@@ -8,30 +8,32 @@
 		"preview": "vite build && vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/adapter-static": "^3.0.6",
-		"@sveltejs/kit": "^2.12.1",
-		"@sveltejs/vite-plugin-svelte": "^5.0.2",
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.49.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/vite": "^4.1.18",
 		"@zerodevx/svelte-img": "^2.1.2",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.0.0-next.71",
+		"autoprefixer": "^10.4.23",
+		"bits-ui": "^2.14.4",
 		"clsx": "^2.1.1",
-		"embla-carousel-svelte": "^8.5.1",
-		"svelte": "^5.8.1",
-		"tailwind-merge": "^2.5.5",
-		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^3.4.16",
+		"embla-carousel-svelte": "^8.6.0",
+		"svelte": "^5.46.1",
+		"tailwind-merge": "^3.4.0",
+		"tailwind-variants": "^3.2.2",
+		"tailwindcss": "^4.1.18",
 		"tailwindcss-animate": "^1.0.7",
-		"vite": "^6.0.3"
+		"vite": "^7.3.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@internationalized/date": "^3.10.1",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"embla-carousel-autoplay": "^8.5.1",
-		"embla-carousel-wheel-gestures": "^8.0.1",
-		"lucide-svelte": "^0.468.0"
+		"@tailwindcss/forms": "^0.5.11",
+		"@tailwindcss/typography": "^0.5.19",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-wheel-gestures": "^8.1.0",
+		"lucide-svelte": "^0.562.0"
 	},
 	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
